--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -201,6 +201,15 @@ jobs:
       - name: List files
         run: ls -la ${{ github.workspace }}
 
+      - name: List files linux
+        run: ls -la ${{ github.workspace }}/NFO-Creator-linux.AppImage
+
+      - name: List files windows
+        run: ls -la ${{ github.workspace }}/NFO-Creator-windows.exe
+
+      - name: List files linux
+        run: ls -la ${{ github.workspace }}/NFO-Creator-macOS.zip
+
       - name: Create Release
         id: create_release
         uses: ncipollo/release-action@v1.14.0
