--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,9 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
         with:
-          modules: "qtwebengine"
+          version: "6.4.0"
+          install-deps: "true"
+          modules: "qtwebengine qtnetwork"
 
       #
       # Install additional dependencies, stolen from:
@@ -93,7 +95,9 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
         with:
-          modules: "qtwebengine"
+          version: "6.4.0"
+          install-deps: "true"
+          modules: "qtwebengine qtnetwork"
 
       - name: Compile
         run: |
@@ -135,7 +139,9 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
         with:
-          modules: "qtwebengine"
+          version: "6.4.0"
+          install-deps: "true"
+          modules: "qtwebengine qtnetwork"
 
       - name: Install NSIS & OpenSSL
         run: |
