--- a/.github/workflows/build-on-pr.yaml
+++ b/.github/workflows/build-on-pr.yaml
@@ -1,8 +1,9 @@
 name: Build
 on:
   push:
-    branches:
-      - "**"
+    pull_request:
+      branches:
+        - "*"
 
 env:
   EXECUTABLE: "NFO-Creator"
