--- a/.github/workflows/build-on-pr.yaml
+++ b/.github/workflows/build-on-pr.yaml
@@ -1,9 +1,12 @@
 name: Build
 on:
-  push:
-    pull_request:
-      branches:
-        - "*"
+  pull_request:
+    types:
+      - synchronize
+      - opened
+      - reopened
+    branches:
+      - "*"
 
 env:
   EXECUTABLE: "NFO-Creator"
