--- a/.github/workflows/build-on-pr.yaml
+++ b/.github/workflows/build-on-pr.yaml
@@ -1,12 +1,7 @@
 name: Build
 on:
   pull_request:
-    types:
-      - synchronize
-      - opened
-      - reopened
-    branches:
-      - "*"
+    types: [opened, synchronize, reopened]
 
 env:
   EXECUTABLE: "NFO-Creator"
